
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package GUSD;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/GUSD";

message CustodianChangeConfirmed {
	google.protobuf.Timestamp ts = 1;
	bytes LockId = 2;		//	bytes32
	bytes NewCustodian = 3;		//	address
}

message Transfer {
	google.protobuf.Timestamp ts = 1;
	bytes From = 2;		//	address
	bytes To = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Approval {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
	bytes Spender = 3;		//	address
	bytes Value = 4;		//	uint256
}

message ImplChangeRequested {
	google.protobuf.Timestamp ts = 1;
	bytes LockId = 2;		//	bytes32
	bytes MsgSender = 3;		//	address
	bytes ProposedImpl = 4;		//	address
}

message ImplChangeConfirmed {
	google.protobuf.Timestamp ts = 1;
	bytes LockId = 2;		//	bytes32
	bytes NewImpl = 3;		//	address
}

message CustodianChangeRequested {
	google.protobuf.Timestamp ts = 1;
	bytes LockId = 2;		//	bytes32
	bytes MsgSender = 3;		//	address
	bytes ProposedCustodian = 4;		//	address
}
